--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "desa": "nodemon src"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,8 @@
     "express-handlebars": "^5.1.0",
     "fs-extra": "^9.0.1",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.5"
   }
 }
